RGB and HSV values inconsistency #34079

Closed
opened 2013-02-01 20:47:59 +01:00 by Sanc Tuary · 7 comments

%%%winxp 32 bits,

Split the viewport

Have the Texture Paint mode in one window and have the UV/Image Editor in another

  • In the UV/Image Editor click on Image -> New Image
    Change the color of that new image so it has the RGB values R : 0.2 , G : 0.2 and B : 0.2

    • Now go to the Texture Paint viewport and in the color chooser, select a color with the exact same RGB value ( 0.2 at each)

    • back to the UV/Image Editor, change View to Paint and give a brush stroke.

The color of the brush stroke that is using the 0.2 values is of a completely different color than the image color that is using the same exact 0.2 RGB values.

With HSV value instead of RGB, the result is the same, both texture paint mode version of the color and the image editor color are completely different.

I thentested with entering HEX values for the colors (by example use 333333 for the brush and for the image).
The result is that the brush is using then the same color as the image set with the same HEX value, as it should.%%%

%%%winxp 32 bits, Split the viewport Have the Texture Paint mode in one window and have the UV/Image Editor in another - In the UV/Image Editor click on Image -> New Image Change the color of that new image so it has the RGB values R : 0.2 , G : 0.2 and B : 0.2 - Now go to the Texture Paint viewport and in the color chooser, select a color with the exact same RGB value ( 0.2 at each) - back to the UV/Image Editor, change View to Paint and give a brush stroke. The color of the brush stroke that is using the 0.2 values is of a completely different color than the image color that is using the same exact 0.2 RGB values. With HSV value instead of RGB, the result is the same, both texture paint mode version of the color and the image editor color are completely different. I thentested with entering HEX values for the colors (by example use 333333 for the brush and for the image). The result is that the brush is using then the same color as the image set with the same HEX value, as it should.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%forgot to mention, this is for 2.65a and even recent SVN from buildbot, this inconsistency was in 2.62 too.

But in 2.49b both RGB and HSV delivered the expected result, it worked good.%%%

%%%forgot to mention, this is for 2.65a and even recent SVN from buildbot, this inconsistency was in 2.62 too. But in 2.49b both RGB and HSV delivered the expected result, it worked good.%%%
Member

%%%Note that with color management the values are managed too. This might not be always very clear though.%%%

%%%Note that with color management the values are managed too. This might not be always very clear though.%%%
Author

%%%This is it, after reading your comment of the color management, i went to the scene panel and set the "Display Device" from the default "sRGB" to "None"

Then setting R : 0.2 , G : 0.2 and B : 0.2 in the image editor color gave me the same exact color as if i setup R : 0.2 , G : 0.2 and B : 0.2 in the Texture paint mode color.

So it looks like the color management is influencing RGB values in the Image Editor but is not influencing RGB values for the brushes in the Texture paint mode. If it is intended it is indeed very confusing for the user to see colors not being the same in every modes despite using the same RGB values.%%%

%%%This is it, after reading your comment of the color management, i went to the scene panel and set the "Display Device" from the default "sRGB" to "None" Then setting R : 0.2 , G : 0.2 and B : 0.2 in the image editor color gave me the same exact color as if i setup R : 0.2 , G : 0.2 and B : 0.2 in the Texture paint mode color. So it looks like the color management is influencing RGB values in the Image Editor but is not influencing RGB values for the brushes in the Texture paint mode. If it is intended it is indeed very confusing for the user to see colors not being the same in every modes despite using the same RGB values.%%%

%%%Well, i hope i understand the issue correct and fix is correct in svn rev54293. Please test behavior here further and let me know if something is still wrong. For until then considering issue solved :)%%%

%%%Well, i hope i understand the issue correct and fix is correct in svn rev54293. Please test behavior here further and let me know if something is still wrong. For until then considering issue solved :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Hello,

I just tested on r54347 from the buildbot and i can confirm the issue is fixed , RGB values now correspond to the same color in both UV/Image Editor and in the Texture Paint brushes.

Thank you.%%%

%%%Hello, I just tested on r54347 from the buildbot and i can confirm the issue is fixed , RGB values now correspond to the same color in both UV/Image Editor and in the Texture Paint brushes. Thank you.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34079
No description provided.