Fix #34079: RGB and HSV values inconsistency

Use COLOR_GAMMA subtype for new image color since this color is
actually being color managed. Also made it so byte and float
buffers would have the same exact display color after creation
with the same color value.

Also made it so color strip's color have COLOR_GAMMA subtype,
otherwise swatch color wouldn't match render result which is
not nice at all.